fix overflow check for tab section in unusual contexts
https://coveord.atlassian.net/browse/JSUI-1375

--- a/sass/_ResponsiveTabs.scss
+++ b/sass/_ResponsiveTabs.scss
@@ -1,7 +1,11 @@
 .coveo-small-tabs {
 
-  .coveo-tab-dropdown-header {
+  #coveo-tab-dropdown-header {
     margin-left: auto;
+    height: 40px;
+    * {
+      line-height: 40px;
+    }
   }
 
   .CoveoTab {
